--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -54,6 +54,7 @@ Date2 & Name(s) & Description of changes\\
 \wss{You are free to modify this template.}
 
 \section{Introduction}
+Test Text
 
 \wss{You can include your definition of what a hazard is here.}
 
