--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -108,7 +108,7 @@ Which requirements will be implemented in the future?}
 \input{../Reflection.tex}
 
 \begin{enumerate}
-    \item What went well while writing this deliverable? 
+    \item What went well while writing this deliverable? sample text
     \item What pain points did you experience during this deliverable, and how
     did you resolve them?
     \item Which of your listed risks had your team thought of before this
