--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -52,7 +52,7 @@ Use abstraction so that you can avoid details.}
 \wss{Hardware and software environment}
 
 \section{Goals}
-Test
+Test1
 \section{Stretch Goals}
 
 \section{Challenge Level and Extras}
