--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -22,7 +22,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
+9/18/2024 & Mathew Petronilho & Added Problem, Challenge level and Extras\\
 Date2 & Name(s) & Description of changes\\
 ... & ... & ...\\
 \bottomrule
@@ -39,7 +39,14 @@ Date2 & Name(s) & Description of changes\\
 information.}
 
 \subsection{Problem}
+There is currently a lack of high-quality, labeled satellite imagery datasets tailored for specific use cases. Many industries require specialized data for tasks like disaster 
+response, environmental monitoring, urban planning, or defense, but building these datasets manually is time-consuming, costly, inefficient and may require expert data analysis. 
+This hinders the development and deployment of accurate computer vision models for critical use cases across these various industries.
 
+Our team at OKKM Insights aims to solve this problem by creating an online platform that accelerates this process and brings transparency to satellite imagery data analysis. 
+Using an AI-powered crowd-sourcing model, our platform will allow users to label commercially available satellite images, helping us to build datasets. These datasets will then 
+be used to train custom computer vision models for various use cases. At its core, the platform will offer a paid service for identifying objects within satellite images, 
+and in turn, distribute the earnings to the users who contribute to the labeling effort.
 \subsection{Inputs and Outputs}
 
 \wss{Characterize the problem in terms of ``high level'' inputs and outputs.  
@@ -56,7 +63,27 @@ Test1
 \section{Stretch Goals}
 
 \section{Challenge Level and Extras}
+\subsection{Challenge Level}
+We anticipate this project to be advanced due to our limited domain knowledge of satellite imagery and the complexity of the implementation. 
+To begin, we will be developing a web application from scratch, which poses a challenge as most team members lack experience in front-end development. 
+Additionally, we need to figure out how to seamlessly and automatically acquire paid satellite images for labeling from third-party providers upon customer request. 
+We also need to consider how to break down and distribute image-labeling tasks. This may involve algorithms for splitting larger images into smaller pieces for analysis,
+ identifying images with relevant objects, and determining which users are best suited to label specific images. We will also need to design a consensus algorithm to ensure accurate 
+ labeling, likely incorporating a user accuracy system and a statistical model—both of which will require research to understand and implement effectively. 
+ Once a dataset is validated, we will face additional challenges in the realm of computer vision models. Our team has minimal experience in this area, so selecting, tweaking, 
+ training, and testing the appropriate model for optimal accuracy across diverse datasets will require significant effort. Moreover, we aim to automate the training of the model 
+ once a labeled dataset is complete, which will add to the complexity. The application will also need to handle secure payments from customers and distribute payments to users 
+ and third parties. Since we have no experience with online monetary transactions, this will involve additional research and effort to ensure security and reliability. 
+ Finally, we must integrate all these components seamlessly and deploy the system in a way that ensures efficiency and an excellent user experience.
 
+Overall, with the complexity of the implementation and our current knowledge gaps, we believe that the extra research and level of development will make this an advanced project.
+
+\subsection{Extras}
+\begin{itemize}
+  \item Usability Testing: Conducted by allowing users to test the application interface and provide feedback to us through a questionnaire
+  \item Demonstration Video: Create a video demonstrating how to use the product and its various features
+  \item Formal Proof: Come up with a proof of convergence for labeled images to show that they have a certain level of consistency and accuracy
+\end{itemize}
 \wss{State your expected challenge level (advanced, general or basic).  The
 challenge can come through the required domain knowledge, the implementation or
 something else.  Usually the greater the novelty of a project the greater its
