--- a/docs/Common.tex
+++ b/docs/Common.tex
@@ -1,11 +1,11 @@
 %% Common Parts
 
-\newcommand{\progname}{ProgName} % PUT YOUR PROGRAM NAME HERE
-\newcommand{\authname}{Team \#, Team Name
-\\ Student 1 name
-\\ Student 2 name
-\\ Student 3 name
-\\ Student 4 name} % AUTHOR NAMES                  
+\newcommand{\progname}{Software Engineering} % PUT YOUR PROGRAM NAME HERE
+\newcommand{\authname}{Team \#11, OKKM Insights
+\\ Mathew Petronilho
+\\ Oleg Glotov
+\\ Kyle McMaster
+\\ Kartik Chaudhari} % AUTHOR NAMES                  
 
 \usepackage{hyperref}
     \hypersetup{colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue,
