Added first goals

--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -52,7 +52,24 @@ Use abstraction so that you can avoid details.}
 \wss{Hardware and software environment}
 
 \section{Goals}
-Test1
+\subsection{High Data Accuracy}
+\textbf{Description: }The system should have high classification accuracy for the objects found in the images provided to it. \\\\
+\textbf{Rationale: }The core problem this system must solve is extracting useful information from the provided images.
+ One key metric to determine the utility of the information found, is the classification accuracy of objects identified in the images. If the system is 
+ not able to determine what is contained in an image, it will not be useful to stakeholders.
+\subsection{Ease of use}
+\textbf{Description: }The system should be very easy for stakeholders to use. There should be very low friction for users to classify images and objects found
+in images, even with minimal training. \\\\
+\textbf{Rationale: }To maximize the information gained from users who are contributing to classification efforts, the system must ensure it is simple for users to 
+get started with, and continue using the system. This is necessary to build a large enough user base, which will make it more likely to get insights in an acceptable 
+amount of time.
+\subsection{Ease of use}
+\textbf{Description: }The system should be very easy for stakeholders to use. There should be very low friction for users to classify images and objects found
+in images, even with minimal training. \\\\
+\textbf{Rationale: }To maximize the information gained from users who are contributing to classification efforts, the system must ensure it is simple for users to 
+get started with, and continue using the system. This is necessary to build a large enough user base, which will make it more likely to get insights in an acceptable 
+amount of time.
+
 \section{Stretch Goals}
 
 \section{Challenge Level and Extras}
