--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -22,9 +22,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
+09/19/2024 & Kyle McMaster & Added goals and stretch goals\\
 \bottomrule
 \end{tabularx}
 \end{table}
