Added meeting plan to development plan

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -61,18 +61,11 @@ required to sign the ``Intellectual Property Guide Acknowledgement.''}
 repo.}
 
 \section{Team Meeting Plan}
-
-\wss{How often will you meet? where?}
-
-\wss{If the meeting is a physical location (not virtual), out of an abundance of
-caution for safety reasons you shouldn't put the location online}
-
-\wss{How often will you meet with your industry advisor?  when?  where?}
-
-\wss{Will meetings be virtual?  At least some meetings should likely be
-in-person.}
-
-\wss{How will the meetings be structured?  There should be a chair for all meetings.  There should be an agenda for all meetings.}
+The team will meet weekly on Mondays from 11:30 until 13:20, in a study room booked by Kyle McMaster.
+The schedule to meet with our supervisor will be determined when our supervisor is confirmed.\\\\
+Weekly meetings will be chaired by Kyle, who will prepare an agenda to be sent in advance of team meetings. Team members can add additional agenda items as
+needed. Team members are also able to request additional meetings if necessary. In this case, it is their responsibility to chair the meeting, 
+organize a meeting location, and provide an agenda. Following all meetings, the meeting chair will prepare a list of action items.
 
 \section{Team Communication Plan}
 
