Update to Kyles role to include ML/AI

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -82,7 +82,7 @@ organize a meeting location, and provide an agenda. Following all meetings, the 
     \cline{1-2} 
     Oleg Glotov & Team Lead, Project Manager & \\
     \cline{1-2} 
-    Kyle McMaster & Meeting Chair, Back-End Development Expert  & \\
+    Kyle McMaster & Meeting Chair, Back-End Development \& AI Expert  & \\
     \cline{1-2}
     Kartik Chaudhari & Customer Relations Manager, Git Expert & \\
     \hline
@@ -106,7 +106,8 @@ organize a meeting location, and provide an agenda. Following all meetings, the 
     Coordinates project tasks among team members, organizes meetings, ensures equitable distribution of work, and monitors deadlines to ensure they are met.
     
     \item \textbf{Kyle McMaster:} Responsible for creating meeting agendas, guiding discussions, managing meeting time, and resolving conflicts. 
-    Also responsible for assisting team members with the application's back-end logic and deploying services.
+    Also responsible for assisting team members with the application's back-end logic, deploying services, and contributing expertise in machine learning and artificial intelligence 
+    to integrate advanced data processing, and intelligent system functionalities.
     
     \item \textbf{Kartik Chaudhari:} Responsible for contacting potential customers and managing customer relationships. 
     Oversees the GitHub repository by organizing files and ensuring it is updated to reflect project progress. Provides guidance to team members on resolving issues related to Git.
