--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -203,15 +203,15 @@ For our front-end code, written in JavaScript, we will follow the JavaScript Sta
 
 \section*{Appendix --- Team Charter}
 
-\wss{borrows from
-\href{https://engineering.up.edu/industry_partnerships/files/team-charter.pdf}
-{University of Portland Team Charter}}
+% \wss{borrows from
+% \href{https://engineering.up.edu/industry_partnerships/files/team-charter.pdf}
+% {University of Portland Team Charter}}
 
 \subsection*{External Goals}
 
 As a team, we all see this project as an opportunity to demonstrate the extent of our skills and knowledge after several years of training.
 As such, our main goal is to develop a project we can talk with excitement to future recruiters and for some of us, graduate school admissions committees.
-We intend to work hard to make a project we are very proud of. We all expect this effort will translate into an A+ in the course, although this is somewhat
+We intend to work hard to make a project we are very proud of. We all expect this effort will translate into an A+ in the course, although that is somewhat
 secondary. Our effort will not be limited by the expectations of the capstone course, and instead by the limits of our abilities.
 
 \subsection*{Attendance}
@@ -220,7 +220,7 @@ secondary. Our effort will not be limited by the expectations of the capstone co
 \begin{itemize}
 \item Team members are expected to attend every meeting in person. If attendance in person is not possible, they will notify the team at least 24 hours 
 in advance so the team may discuss mkaing the meeting virtual or rescheduling.
-\item If attendance is not possible, they will notify the team at least 24 hours in advance. Each team member will be permitted to have 2 absences per semester 
+\item If attendance is not possible in person or virtually, they will notify the team at least 24 hours in advance. Each team member will be permitted to have 2 absences per semester 
 without penalty. Additional absences, or absences without proper warning, will have the following diciplinary action:
 
 \begin{itemize}
@@ -258,11 +258,11 @@ All other missed deadlines will result in a message sent to the instructor and a
 
 \subsubsection*{Quality} 
 Based on our expectations for the project, the team is required to meet a very high standard of quality.
-Each addition to the project should be crafted with high attention to detail, and reviewed throughly by the creator.
+Each addition to the project should be crafted with high attention to detail, and reviewed thoroughly by the creator.
 We will expect that every pull request is adding code or text that is ready to be submitted to the best of our abilities.
 To help each other ensure we meet this standard, we will require every addition to be reviewed by at least one other team member.
-This reviewer will approach the review as if they are the last line of defense for the quality of the code.\\\\
-Every team member will complete expected action items and review the provided agenda before each meeting.
+This reviewer will approach the review as if they are the last line of defense for the quality of our codebase.\\\\
+Every team member will complete expected action items and review the provided agenda before each meeting. They will provide additional agenda items when necessary.
 % \wss{What are your team's expectations regarding the quality
 % of team members' preparation for team meetings and the quality of the
 % deliverables that members bring to the team?}
@@ -278,8 +278,8 @@ Every team member will complete expected action items and review the provided ag
 \item Team members will be open to team member ideas. If they do not agree, they are welcome to provide reasons as to why not. It is not permitted to decline an idea because it is `not the way we do things'
 \item Team members will try to work together to make work load equitable
 \item Team members will try to accommodate external responsibilities, but understand it might not always be possible around large deadlines
-\item Team members will answer questions and provide additional information to team members who are interested in developing skills they are proficient In
-\item We will be kind
+\item Team members will answer questions and provide additional information to team members who are interested in developing skills others are proficient in
+\item \textbf{We will be kind}
 \end{itemize}
 % \wss{What are your team's expectations regarding team members' ideas,
 % interactions with the team, cooperation, attitudes, and anything else regarding
@@ -289,16 +289,16 @@ Every team member will complete expected action items and review the provided ag
 \subsubsection*{Stay on Track}
 
 The team will work well in advance to assign work to team members. The team will schedule time in weekly meeting to have a `stand up' meeting, where they
-discuss progress and blockers. This will ensure there are no surprises when a deadline is approaching. We will also define internal deadlines to provide enough
-time for someone to cover in the unlikely event that a team member is not able to meet a deadline.\\\\
+discuss progress and blockers. This will ensure there are no surprises when a deadline is approaching. We will also define earlier internal deadlines to provide enough
+time for someone to cover in the unlikely event that a team member is not able to meet a deadline.\\
 
 We will track team member progress by the amount of deliverables they complete in each milestone. Typlically, one deliverable will correspond to one or two 
 GitHub issues. We believe this metric will be more useful than lines of code or commits, both of which can be manipulated and do not always capture the 
-amount of value contributed.
+amount of value contributed. If planned correctly, each issue should contain roughly the same amount of effort to complete (although this won't always be the case).\\
 
 We will also track attendance at meetings and lecture. Attendance at meetings is very important and penalties for absence are discussed above. Attending lecture is
-also important to the team, but a little less so. As long as we are able to find one person to attend, we will not worry much about lecture attendance. We will 
-be sure to track lecture attendance so if we need to force someone to attend, we can choose the person with worst attendance.
+also important to the team, but less so. As long as we are able to find one person to attend, we will not worry much about lecture attendance. We will 
+track lecture attendance so if we need to force someone to attend, we can choose the person with worst attendance.
 
 % \wss{What methods will be used to keep the team on track? How will your team
 % ensure that members contribute as expected to the team and that the team
@@ -318,7 +318,7 @@ be sure to track lecture attendance so if we need to force someone to attend, we
 
 We already have a strong start with building rapport within the team. 
 Everyone is very friendly towards each other and is aligned to the mission. We tend to sit together in lecture and are active in our group chats. 
-After a large deliverable, the team has agreed to celebrate at a location of their choosing. 
+After a large deliverable, the team has agreed to celebrate at a location of their choosing. Kyle might even host a party if there is interest within the team.
 
 % \wss{How will you build team cohesion (fun time, group rituals, etc.)? }
 
