Added GitHub project description

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -129,10 +129,16 @@ likely change throughout the year.}
 
 \section{Project Decomposition and Scheduling}
 
-\begin{itemize}
-  \item How will you be using GitHub projects?
-  \item Include a link to your GitHub project
-\end{itemize}
+% \begin{itemize}
+%   \item How will you be using GitHub projects?
+%   \item Include a link to your GitHub project
+% \end{itemize}
+
+We will use a Kanban board to track tasks for each deliverable. First, work to be completed will be identified and added to the project backlog.
+Then, team members will be assigned tasks. Once assigned, they will be moved to the `Assigned' section of the board. When actively being worked on, they will
+move to the `inflight' section. After completion, and when a pull request is made, they will be moved to the `for review' board. Finally, when the review is
+complete, they are moved to the archive. This organization will allow us to track how different components of the project are progressing, and identify
+if a team member is overwhelmed before it becomes a catastrophic issue.
 
 \wss{How will the project be scheduled?  This is the big picture schedule, not
 details. You will need to reproduce information that is in the course outline
